--- a/Health_Project/fe_health/package.json
+++ b/Health_Project/fe_health/package.json
@@ -11,6 +11,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
+    "styled-component": "^2.8.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
@@ -39,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "@types/fullpage.js": "^2.9.3",
     "@types/styled-components": "^5.1.25"
   }
 }
