--- a/Health_Project/fe_health/package.json
+++ b/Health_Project/fe_health/package.json
@@ -11,6 +11,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
+    "sass": "^1.51.0",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.5",
     "swiper": "^8.1.4",
