--- a/Health_Project/fe_health/package.json
+++ b/Health_Project/fe_health/package.json
@@ -10,6 +10,7 @@
     "http-proxy-middleware": "^2.0.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-modal": "^3.15.1",
     "react-scripts": "5.0.0",
     "sass": "^1.51.0",
     "styled-component": "^2.8.0",
