--- a/Health_Project/fe_health/package.json
+++ b/Health_Project/fe_health/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.0.0",
     "react-modal": "^3.15.1",
     "react-gsap": "^3.2.1",
+    "react-modal": "^3.15.1",
     "react-scripts": "5.0.0",
     "sass": "^1.51.0",
     "styled-component": "^2.8.0",
