--- a/Health_Project/fe_health/package.json
+++ b/Health_Project/fe_health/package.json
@@ -11,8 +11,10 @@
     "bootstrap": "^5.1.3",
     "http-proxy-middleware": "^2.0.4",
     "lodash": "^4.17.21",
+    "moment": "^2.29.3",
     "react": "^18.0.0",
     "react-bootstrap": "^1.4.0",
+    "react-calendar": "^3.7.0",
     "react-dom": "^18.0.0",
     "react-gsap": "^3.2.1",
     "react-modal": "^3.15.1",
