--- a/Health_Project/fe_health/package.json
+++ b/Health_Project/fe_health/package.json
@@ -14,9 +14,11 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "react": "^18.0.0",
+    "react-battery-gauge": "^1.0.3",
     "react-bootstrap": "^1.4.0",
     "react-calendar": "^3.7.0",
     "react-dom": "^18.0.0",
+    "react-gauge-chart": "^0.4.0",
     "react-gsap": "^3.2.1",
     "react-modal": "^3.15.1",
     "react-redux": "^8.0.2",
