--- a/Health_Project/fe_health/package.json
+++ b/Health_Project/fe_health/package.json
@@ -23,6 +23,7 @@
     "react-modal": "^3.15.1",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.0",
+    "react-simple-chatbot": "^0.6.1",
     "recharts": "^2.1.10",
     "sass": "^1.51.0",
     "styled-component": "^2.8.0",
