--- a/Health_Project/fe_health/package.json
+++ b/Health_Project/fe_health/package.json
@@ -31,7 +31,7 @@
     "swiper": "^8.1.4",
     "web-vitals": "^2.1.4"
   },
-  "proxy": "http://apiserver.com:8080",
+  "proxy": "http://localhost:8080",
   "scripts": {
     "start": "set PORT=3000 && react-scripts start",
     "build": "react-scripts build",
