--- a/Health_Project/fe_health/package.json
+++ b/Health_Project/fe_health/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.0.0",
     "react-gauge-chart": "^0.4.0",
     "react-gsap": "^3.2.1",
+    "react-icons": "^4.4.0",
     "react-modal": "^3.15.1",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.0",
