--- a/Health_Project/fe_health/package.json
+++ b/Health_Project/fe_health/package.json
@@ -34,7 +34,7 @@
   "proxy": "http://localhost:8080",
   "scripts": {
     "start": "set PORT=3000 && react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
