--- a/Health_Project/fe_health/package.json
+++ b/Health_Project/fe_health/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "gsap": "^3.10.4",
     "http-proxy-middleware": "^2.0.4",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
@@ -20,6 +21,7 @@
     "react-dom": "^18.0.0",
     "react-gauge-chart": "^0.4.0",
     "react-gsap": "^3.2.1",
+    "react-hover-video-player": "^9.6.1",
     "react-icons": "^4.4.0",
     "react-modal": "^3.15.1",
     "react-redux": "^8.0.2",
