--- a/Health_Project/fe_health/package.json
+++ b/Health_Project/fe_health/package.json
@@ -17,11 +17,14 @@
     "react-battery-gauge": "^1.0.3",
     "react-bootstrap": "^1.4.0",
     "react-calendar": "^3.7.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.0.0",
     "react-gauge-chart": "^0.4.0",
     "react-gsap": "^3.2.1",
     "react-icons": "^4.4.0",
     "react-modal": "^3.15.1",
+    "react-multi-date-picker": "^3.3.0",
+    "react-multiple-datepicker": "^0.1.0",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.0",
     "react-simple-chatbot": "^0.6.1",
