--- a/Health_Project/fe_health/package.json
+++ b/Health_Project/fe_health/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/css": "^11.9.0",
     "@fullpage/react-fullpage": "^0.1.22",
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.3",
