게시판 코드 오류 수정 및 테스트코드 작성

--- a/Health_Project/be_health/build.gradle
+++ b/Health_Project/be_health/build.gradle
@@ -25,7 +25,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web' // Spring Web
 	compileOnly 'org.projectlombok:lombok' // Lombok
 	runtimeOnly 'com.h2database:h2' // H2 Database
-	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client' // MariaDB Driver
+	// runtimeOnly 'org.mariadb.jdbc:mariadb-java-client' // MariaDB Driver
 	annotationProcessor 'org.projectlombok:lombok' // 기본
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'	//기본
 }
