--- a/Health_Project/be_health/build.gradle
+++ b/Health_Project/be_health/build.gradle
@@ -26,6 +26,8 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok' // Lombok
 	runtimeOnly 'com.h2database:h2' // H2 Database
 	// runtimeOnly 'org.mariadb.jdbc:mariadb-java-client' // MariaDB Driver
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	annotationProcessor 'org.projectlombok:lombok' // 기본
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'	//기본
 }
