--- a/Health_Project/fe_health/package.json
+++ b/Health_Project/fe_health/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fullpage/react-fullpage": "^0.1.22",
+    "@hookform/resolvers": "^2.9.3",
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
@@ -21,6 +22,7 @@
     "react-dom": "^18.0.0",
     "react-gauge-chart": "^0.4.0",
     "react-gsap": "^3.2.1",
+    "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
     "react-modal": "^3.15.1",
     "react-multi-date-picker": "^3.3.0",
@@ -34,7 +36,8 @@
     "styled-components": "^5.3.5",
     "styled-theming": "^2.2.0",
     "swiper": "^8.1.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "proxy": "http://localhost:8080",
   "scripts": {
