--- a/Health_Project/fe_health/package.json
+++ b/Health_Project/fe_health/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "gsap": "^3.10.4",
     "http-proxy-middleware": "^2.0.4",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
@@ -29,6 +30,7 @@
     "react-multiple-datepicker": "^0.1.0",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.0",
+    "react-scrollmagic": "^2.3.0",
     "react-simple-chatbot": "^0.6.1",
     "recharts": "^2.1.10",
     "sass": "^1.51.0",
