--- a/Health_Project/fe_health/package.json
+++ b/Health_Project/fe_health/package.json
@@ -14,6 +14,7 @@
     "http-proxy-middleware": "^2.0.4",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
+    "nodemailer": "^6.7.7",
     "react": "^18.0.0",
     "react-battery-gauge": "^1.0.3",
     "react-bootstrap": "^1.4.0",
