--- a/Health_Project/fe_health/package.json
+++ b/Health_Project/fe_health/package.json
@@ -26,6 +26,7 @@
     "react-gauge-chart": "^0.4.0",
     "react-gsap": "^3.2.1",
     "react-hook-form": "^7.33.1",
+    "react-hover-video-player": "^9.6.1",
     "react-icons": "^4.4.0",
     "react-modal": "^3.15.1",
     "react-multi-date-picker": "^3.3.0",
