--- a/Health_Project/fe_health/package.json
+++ b/Health_Project/fe_health/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "@emotion/css": "^11.9.0",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@fullpage/react-fullpage": "^0.1.22",
+    "@mui/material": "^5.8.7",
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
@@ -29,9 +32,11 @@
     "react-multi-date-picker": "^3.3.0",
     "react-multiple-datepicker": "^0.1.0",
     "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-scrollmagic": "^2.3.0",
     "react-simple-chatbot": "^0.6.1",
+    "react-toastify": "^9.0.5",
     "recharts": "^2.1.10",
     "sass": "^1.51.0",
     "styled-component": "^2.8.0",
