--- a/Health_Project/fe_health/package.json
+++ b/Health_Project/fe_health/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
     "@emotion/css": "^11.9.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
@@ -15,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.1",
     "gsap": "^3.10.4",
     "http-proxy-middleware": "^2.0.4",
     "lodash": "^4.17.21",
