--- a/Health_Project/fe_health/package.json
+++ b/Health_Project/fe_health/package.json
@@ -41,6 +41,7 @@
     "react-scripts": "5.0.0",
     "react-scrollmagic": "^2.3.0",
     "react-simple-chatbot": "^0.6.1",
+    "react-time-picker": "^5.0.0",
     "react-toastify": "^9.0.5",
     "recharts": "^2.1.10",
     "sass": "^1.51.0",
