--- a/Health_Project/fe_health/package.json
+++ b/Health_Project/fe_health/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^11.9.3",
     "@fullpage/react-fullpage": "^0.1.22",
     "@hookform/resolvers": "^2.9.3",
+    "@iconify/react": "^4.0.0",
     "@mui/material": "^5.8.7",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.3",
