--- a/Health_Project/fe_health/package.json
+++ b/Health_Project/fe_health/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.1",
+    "firebase": "^9.10.0",
     "gsap": "^3.10.4",
     "http-proxy-middleware": "^2.0.4",
     "lodash": "^4.17.21",
@@ -39,6 +40,7 @@
     "react-multi-date-picker": "^3.3.0",
     "react-multiple-datepicker": "^0.1.0",
     "react-redux": "^8.0.2",
+    "react-redux-firebase": "^3.11.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-scrollmagic": "^2.3.0",
@@ -46,6 +48,7 @@
     "react-time-picker": "^5.0.0",
     "react-toastify": "^9.0.5",
     "recharts": "^2.1.10",
+    "recoil": "^0.7.5",
     "sass": "^1.51.0",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.5",
