--- a/Health_Project/fe_health/package.json
+++ b/Health_Project/fe_health/package.json
@@ -49,6 +49,7 @@
     "react-toastify": "^9.0.5",
     "recharts": "^2.1.10",
     "recoil": "^0.7.5",
+    "redux": "^4.2.0",
     "sass": "^1.51.0",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.5",
